--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,24 @@
     "manifest_version": 3,
     "name": "React Chrome Extension",
     "description": "This is a Chrome extension built with React and TypeScript",
-    "content_scripts": [
-        {
-            "js": ["js/content.js"],
-            "matches": [
-                "https://developer.chrome.com/docs/extensions/*",
-                "https://developer.chrome.com/docs/webstore/*"
-            ]
-        }
-    ],
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": ["activeTab", "scripting"],
     "action": {
-        "default_popup": "js/index.html",
-        "default_title": "React Chrome Extension"
+        "default_icon": {
+            "16": "images/icon-16.png",
+            "32": "images/icon-32.png",
+            "48": "images/icon-48.png",
+            "128": "images/icon-128.png"
+        }
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl+B",
+                "mac": "Command+B"
+            }
+        }
     }
 }
